--- a/clusters/dev/namespaces.yaml
+++ b/clusters/dev/namespaces.yaml
@@ -8,6 +8,7 @@ spec:
     secretRef:
       name: gitops-reconciler-kubeconfig
       key: kubeconfig
+  serviceAccountName: gitops-reconciler
   interval: 10m0s
   sourceRef:
     kind: GitRepository
