--- a/infrastructure/namespaces/base/test-hola.yaml
+++ b/infrastructure/namespaces/base/test-hola.yaml
@@ -8,3 +8,25 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: daniel-new1
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: simple-webapp-blue
+  namespace: daniel-new1
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: simple-webapp-blue
+  template:
+    metadata:
+      labels:
+        app: simple-webapp-blue
+    spec:
+      containers:
+        - image: "ubuntu:jammy"
+          command:
+            - "sleep"
+            - "604800"
+          name: simple-webapp-blue
