--- a/clusters/apps/namespaces.yaml
+++ b/clusters/apps/namespaces.yaml
@@ -2,18 +2,18 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: Adaniel1
+  name: adaniel1
 ---
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: Adaniel2
+  name: adaniel2
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: simple-webapp-blue
-  namespace: Adaniel2
+  namespace: adaniel2
 spec:
   replicas: 3
   selector:
