--- a/infrastructure/namespaces/base/test-hola.yaml
+++ b/infrastructure/namespaces/base/test-hola.yaml
@@ -9,6 +9,11 @@ kind: Namespace
 metadata:
   name: daniel-new1
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: daniel-new2
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
